--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2"
+    "@radix-ui/react-slot": "^1.0.2",
+    "lucide-react": "^0.263.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
